Driven in sourcecode till test are passing green

--- a/rottenpotatoes/app/views/movies/edit.html.haml
+++ b/rottenpotatoes/app/views/movies/edit.html.haml
@@ -6,11 +6,15 @@
 
   = label :movie, :title, 'Title'
   = text_field :movie, 'title'
-
+  %br
+  = label :movie, :description, 'description'  
+  %br
+  = text_area :movie, 'description',:value => @movie.description  
+  %br
   = label :movie, :rating, 'Rating'
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
 
   = label :movie, :release_date, 'Released On'
   = date_select :movie, :release_date
-
+  %br
   = submit_tag 'Update Movie Info', :class => 'btn btn-primary'
