--- a/rottenpotatoes/app/views/users/new.html.erb
+++ b/rottenpotatoes/app/views/users/new.html.erb
@@ -9,3 +9,7 @@
     <%= f.password_field :password %>
     <%= f.submit 'Sign Up' %>
 <% end %>
+
+<h3>Or Login with Google:<h3>
+
+<%= button_to 'Google', '/auth/google_oauth2' %>
