add Logout button to movies app

--- a/rottenpotatoes/app/views/movies/index.html.haml
+++ b/rottenpotatoes/app/views/movies/index.html.haml
@@ -33,3 +33,5 @@
   %label{:for => 'search_terms'} Search Terms
   = text_field_tag "search_terms"
   = submit_tag "Search TMDb"
+
+= button_to 'Logout', logout_path
