--- a/rottenpotatoes/app/views/users/new.html.erb
+++ b/rottenpotatoes/app/views/users/new.html.erb
@@ -12,4 +12,4 @@
 
 <h3>Or Login with Google:<h3>
 
-<%= button_to 'Google', '/auth/google_oauth2' %>
+<%= button_to 'Google', '/auth/google_oauth2/callback' %>
